@@ -47,7 +47,7 @@ import java.util.Map;
  * </ol>
  *
  * @author Mike Hutchinson
- * @version $Id: JtdsCallableStatement.java,v 1.21 2007-07-08 19:26:57 bheineman Exp $
+ * @version $Id: JtdsCallableStatement.java,v 1.22 2007-07-08 19:40:47 bheineman Exp $
  */
 public class JtdsCallableStatement extends JtdsPreparedStatement implements CallableStatement {
     /** Last parameter retrieved was null. */
@@ -131,6 +131,44 @@ public class JtdsCallableStatement extends JtdsPreparedStatement implements Call
     }
     
     /**
+     * Execute the SQL batch on a MS server.
+     * @param size the total size of the batch.
+     * @param executeSize the maximum number of statements to send in one request.
+     * @param counts the returned update counts.
+     * @return Chained exceptions linked to a <code>SQLException</code>.
+     * @throws SQLException
+     */
+    protected SQLException executeMSBatch(int size, int executeSize, ArrayList counts)
+    throws SQLException {
+        if (parameters.length == 0) {
+            // No parameters so we can execute as a simple batch
+            return super.executeMSBatch(size, executeSize, counts);
+        }
+        SQLException sqlEx = null;
+        tds.startBatch();
+        for (int i = 0; i < size;) {
+            Object value = batchValues.get(i);
+            ++i;
+            // Execute batch now if max size reached or end of batch
+            boolean executeNow = (i % executeSize == 0) || i == size;
+
+            tds.executeSQL(sql, procName, (ParamInfo[])value, false, 0, -1, -1, executeNow);
+
+            // If the batch has been sent, process the results
+            if (executeNow) {
+                sqlEx = tds.getBatchCounts(counts, sqlEx);
+
+                // If a serious error then we stop execution now as count 
+                // is too small.
+                if (sqlEx != null && counts.size() != i) {
+                    break;
+                }
+            }
+        }
+        return sqlEx;
+    }
+
+    /**
      * Execute the SQL batch on a Sybase server.
      * <p/>For the rare case of CallableStatement batches each statement
      * is executed individually. This ensures that problems with the server
@@ -145,8 +183,12 @@ public class JtdsCallableStatement extends JtdsPreparedStatement implements Call
      * @throws SQLException
      */
     protected SQLException executeSybaseBatch(int size, int executeSize, ArrayList counts)
-    throws SQLException
-    {
+    throws SQLException {
+        if (parameters.length == 0) {
+            // No parameters so we can execute as a simple batch
+            return super.executeSybaseBatch(size, executeSize, counts);
+        }
+        
         SQLException sqlEx = null;
         
         for (int i = 0; i < size;) {
